--- a/app/src/main/res/layout/activity_mainnotas.xml
+++ b/app/src/main/res/layout/activity_mainnotas.xml
@@ -17,10 +17,16 @@
         android:layout_marginTop="10sp"
         app:srcCompat="@drawable/logo_portucalense" />
 
-    <TextView
-        android:id="@+id/horario"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewNotas"
         android:layout_width="match_parent"
-        android:layout_height="390dp" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:paddingBottom="105dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
 
     <Button
         android:id="@+id/sair"
