--- a/app/src/main/res/layout/recycle_view_notas.xml
+++ b/app/src/main/res/layout/recycle_view_notas.xml
@@ -10,7 +10,7 @@
     android:background="@drawable/background_login_btn">
 
     <TextView
-        android:id="@+id/textViewDisciplinas"
+        android:id="@+id/textViewNotas"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:gravity="center_vertical"
