--- a/app/src/main/res/layout/recycle_view_notas.xml
+++ b/app/src/main/res/layout/recycle_view_notas.xml
@@ -11,15 +11,29 @@
 
     <TextView
         android:id="@+id/textViewNotas"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_width="65dp"
+        android:layout_height="55dp"
         android:gravity="center_vertical"
         android:textColor="@color/white"
         android:textSize="21sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.134"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.355" />
+
+    <TextView
+        android:id="@+id/textViewDisc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="21sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.403"
+        app:layout_constraintStart_toEndOf="@+id/textViewNotas"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
